<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp"
    android:orientation="vertical">
    <Button
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        android:layout_marginHorizontal="5dp">
    </Button>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_about"
        ></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="16sp"
        android:layout_marginTop="20dp">
    </TextView>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name_hint"
        android:autofillHints="true"
        android:inputType="text"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:textSize="16sp"
        android:layout_marginTop="20dp">
    </TextView>

    <EditText
        android:id="@+id/edit_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_author_hint"
        android:autofillHints="true"
        android:inputType="text"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/submit_text"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="45dp"
        android:textSize="13sp"
        android:textColor="@color/purple_700">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/open_text"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="45dp"
        android:textSize="13sp"
        android:textColor="@color/purple_500">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>