<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/txt_option"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_text"
        android:textSize="20sp"
        android:layout_gravity="end">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_book"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="5dp"
            android:contentDescription="@string/image_about"
            android:src="@drawable/common_google_signin_btn_icon_dark_focused">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
            </TextView>
            <TextView
                android:id="@+id/txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="16sp"
                android:layout_marginBottom="5dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>